--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,9 @@
   --color-box: #e7e9fc;
   --color-icons: #31d0aa;
   --color-border: #8e8f99;
+  --color-back-modal: #2e2f4266;
+  --color-modal: #fcfcfc;
+  --color-modal-label: #8e8f99;
 }
 
 /* Global styles */
@@ -205,7 +208,7 @@ h6 {
   margin-bottom: 48px;
 }
 
-.hero-button {
+.button {
   margin: 0 auto;
   display: block;
   min-width: 169px;
@@ -224,12 +227,12 @@ h6 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-button:hover {
+.button:hover {
   background-color: var(--color-hover);
   color: var(--color-light);
 }
 
-.hero-button:focus {
+.button:focus {
   background-color: var(--color-hover);
   color: var(--color-light);
 }
@@ -508,6 +511,10 @@ h6 {
   letter-spacing: 0.02em;
 }
 
+.footer-social {
+  margin-right: 80px;
+}
+
 .footer-social-title {
   display: inline-block;
   margin-bottom: 16px;
@@ -553,4 +560,225 @@ h6 {
 
 .footer-social-img {
   fill: var(--color-basic-light);
+}
+
+.subscride {
+  margin: 0;
+  margin-bottom: 16px;
+}
+.footer-subscribe {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-label {
+  display: block;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.footer-input {
+  border-radius: 4px;
+  border: 1px solid var(--color-background);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  width: 100%;
+  padding: 8px 16px;
+}
+
+.subscride-button {
+  color: var(--color-background);
+  display: inline-flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 4px;
+  background: var(--c-brand);
+  border: none;
+
+  min-width: 165px;
+  height: 40px;
+}
+
+/* Modal */
+.backdrop {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.bacdrop-is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 408px;
+  min-height: 584px;
+  background: var(--color-modal);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 24px;
+}
+
+.modal-close-p {
+  margin-bottom: 24px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-box);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover {
+  background-color: var(--color-hover);
+}
+.modal-close:focus {
+  background-color: var(--color-hover);
+}
+
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-title {
+  color: var(--color-basic);
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding-top: 24px;
+  margin-bottom: 16px;
+}
+
+.modal-field {
+  margin-bottom: 8px;
+}
+
+.modal-label {
+  display: block;
+  margin-bottom: 4px;
+  color: var(--color-modal-label);
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+}
+
+.modal-input {
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid var(--color-back-modal, rgba(46, 47, 66, 0.4));
+  background-color: var(--color-modal);
+  padding: 8px 16px;
+  transition: border-color 250ms;
+}
+
+.modal-input:focus {
+  outline: none;
+  border-color: var(--c-brand);
+}
+
+.modal-input-svg {
+  padding-left: 38px;
+}
+
+.modal-input-wrap {
+  position: relative;
+}
+
+.modal-input-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms;
+}
+
+.modal-input:focus + .modal-input-icon {
+  fill: var(--c-brand);
+}
+
+.modal-textarea-field {
+  margin-bottom: 16px;
+}
+
+.modal-texarea {
+  min-height: 160px;
+  resize: none;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid var(--color-back-modal, rgba(46, 47, 66, 0.4));
+  background-color: var(--color-modal);
+  padding: 8px 16px;
+}
+
+.modal-checkbox {
+  margin: 0;
+  margin-bottom: 24px;
+}
+
+.modal-checkbox-check {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  margin: 0;
+  margin-right: 8px;
+}
+
+.modal-checkbox-label {
+  font-size: 12px;
+  letter-spacing: 0.04em;
+  line-height: 1.17;
+  color: var(--color-border);
+}
+
+.modal-checkbox-input:checked + .modal-checkbox-label .modal-checkbox-check {
+  background-color: var(--color-hover);
+  border: none;
+  fill: var(--color-basic-light);
+}
+
+.modal-link {
+  color: var(--c-brand);
 }
