--- a/css/styles.css
+++ b/css/styles.css
@@ -579,25 +579,43 @@ h6 {
 
 .footer-input {
   border-radius: 4px;
-  border: 1px solid var(--color-background);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  width: 100%;
-  padding: 8px 16px;
+  border: 1px solid var(--color-light);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--color-light);
+}
+
+input::placeholder {
+  color: var(--color-light);
 }
 
 .subscride-button {
-  color: var(--color-background);
-  display: inline-flex;
+  min-width: 165px;
+  height: 40px;
+  display: flex;
   padding: 8px 24px;
   justify-content: center;
   align-items: center;
-  gap: 16px;
-  border-radius: 4px;
+  font-family: 'roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--color-background);
+  cursor: pointer;
   background: var(--c-brand);
   border: none;
+  border-radius: 4px;
+}
 
-  min-width: 165px;
-  height: 40px;
+.subscribe-svg {
+  margin-left: 16px;
 }
 
 /* Modal */
