--- a/css/styles.css
+++ b/css/styles.css
@@ -602,7 +602,7 @@ input::placeholder {
   padding: 8px 24px;
   justify-content: center;
   align-items: center;
-  font-family: 'roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -652,11 +652,7 @@ input::placeholder {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 24px;
-}
-
-.modal-close-p {
-  margin-bottom: 24px;
+  padding: 72px 24px 24px 24px;
 }
 
 .modal-close {
@@ -679,9 +675,13 @@ input::placeholder {
 
 .modal-close:hover {
   background-color: var(--color-hover);
+  border: none;
+  fill: var(--color-light);
 }
 .modal-close:focus {
   background-color: var(--color-hover);
+  border: none;
+  fill: var(--color-light);
 }
 
 .modal-close-icon {
@@ -689,15 +689,14 @@ input::placeholder {
 }
 
 .modal-title {
-  color: var(--color-basic);
-  text-align: center;
-  font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
+  text-align: center;
   letter-spacing: 0.02em;
-  padding-top: 24px;
   margin-bottom: 16px;
+  color: var(--color-basic);
+  font-family: Roboto;
 }
 
 .modal-field {
@@ -711,17 +710,19 @@ input::placeholder {
   font-family: Roboto;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
 }
 
 .modal-input {
   width: 100%;
+  height: 40px;
   border-radius: 4px;
   border: 1px solid var(--color-back-modal, rgba(46, 47, 66, 0.4));
-  background-color: var(--color-modal);
+  background-color: transparent;
+  outline: transparent;
   padding: 8px 16px;
-  transition: border-color 250ms;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -742,7 +743,7 @@ input::placeholder {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: fill 250ms;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus + .modal-input-icon {
@@ -754,13 +755,21 @@ input::placeholder {
 }
 
 .modal-texarea {
-  min-height: 160px;
-  resize: none;
+  height: 120px;
   width: 100%;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   border-radius: 4px;
+  color: rgba(46, 47, 66, 0.4);
   border: 1px solid var(--color-back-modal, rgba(46, 47, 66, 0.4));
-  background-color: var(--color-modal);
+  background-color: transparent;
   padding: 8px 16px;
+  resize: none;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-texarea:focus {
+  border-color: var(--c-brand);
 }
 
 .modal-checkbox {
