--- a/css/styles.css
+++ b/css/styles.css
@@ -676,12 +676,13 @@ input::placeholder {
 .modal-close:hover {
   background-color: var(--color-hover);
   border: none;
-  fill: var(--color-light);
+  fill: #ffffff;
 }
+
 .modal-close:focus {
   background-color: var(--color-hover);
   border: none;
-  fill: var(--color-light);
+  fill: #ffffff;
 }
 
 .modal-close-icon {
@@ -726,7 +727,6 @@ input::placeholder {
 }
 
 .modal-input:focus {
-  outline: none;
   border-color: var(--c-brand);
 }
 
@@ -757,6 +757,7 @@ input::placeholder {
 .modal-texarea {
   height: 120px;
   width: 100%;
+  font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   border-radius: 4px;
@@ -768,6 +769,7 @@ input::placeholder {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-texarea:focus {
   border-color: var(--c-brand);
 }
