Changed some styles in textarea, input checkbox and button close in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -674,13 +674,13 @@ input::placeholder {
 }
 
 .modal-close:hover {
-  background-color: var(--color-hover);
+  background-color: #404bbf;
   border: none;
   fill: #ffffff;
 }
 
 .modal-close:focus {
-  background-color: var(--color-hover);
+  background-color: #404bbf;
   border: none;
   fill: #ffffff;
 }
@@ -727,7 +727,7 @@ input::placeholder {
 }
 
 .modal-input:focus {
-  border-color: var(--c-brand);
+  border-color: #4d5ae5;
 }
 
 .modal-input-svg {
@@ -771,7 +771,7 @@ input::placeholder {
 }
 
 .modal-texarea:focus {
-  border-color: var(--c-brand);
+  border-color: #4d5ae5;
 }
 
 .modal-checkbox {
@@ -803,9 +803,9 @@ input::placeholder {
 }
 
 .modal-checkbox-input:checked + .modal-checkbox-label .modal-checkbox-check {
-  background-color: var(--color-hover);
+  background-color: #404bbf;
   border: none;
-  fill: var(--color-basic-light);
+  fill: #f4f4fd;
 }
 
 .modal-link {
