--- a/css/styles.css
+++ b/css/styles.css
@@ -673,18 +673,18 @@ input::placeholder {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover {
+.modal-close:hover + .modal-close:focus {
   background-color: #404bbf;
   border: none;
   fill: #ffffff;
 }
 
-.modal-close:focus {
+/*.modal-close:focus {
   background-color: #404bbf;
   border: none;
   fill: #ffffff;
 }
-
+*/
 .modal-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -724,10 +724,6 @@ input::placeholder {
   outline: transparent;
   padding: 8px 16px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-input:focus {
-  border-color: #4d5ae5;
 }
 
 .modal-input-svg {
