--- a/css/styles.css
+++ b/css/styles.css
@@ -625,6 +625,9 @@ input::placeholder {
   pointer-events: none;
   padding: 0;
   position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 0;
   left: 0;
   width: 100%;
@@ -655,6 +658,10 @@ input::placeholder {
   padding: 72px 24px 24px 24px;
 }
 
+.backdrop.backdrop.backdrop-is-open.modal {
+  transform: scale(0);
+}
+
 .modal-close {
   position: absolute;
   top: 24px;
@@ -673,20 +680,30 @@ input::placeholder {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover + .modal-close:focus {
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-icon:focus {
+  fill: #4d5ae5;
+}
+
+.modal-close:hover {
   background-color: #404bbf;
   border: none;
+}
+
+.modal-close:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal .modal-close:hover {
   fill: #ffffff;
 }
 
-/*.modal-close:focus {
-  background-color: #404bbf;
-  border: none;
+.modal .modal-close:focus {
   fill: #ffffff;
-}
-*/
-.modal-close-icon {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-title {
