--- a/css/styles.css
+++ b/css/styles.css
@@ -637,7 +637,7 @@ input::placeholder {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.bacdrop-is-open {
+.backdrop.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
@@ -817,8 +817,8 @@ input::placeholder {
 
 .modal-checkbox-input:checked + .modal-checkbox-label .modal-checkbox-check {
   background-color: #404bbf;
-  border: none;
   fill: #f4f4fd;
+  border: none;
 }
 
 .modal-link {
